@@ -1,5 +1,6 @@
 if(CMAKE_BUILD_TYPE MATCHES Debug)
   message("-- ${CMAKE_CURRENT_SOURCE_DIR} > Debug build.")
+
 elseif(CMAKE_BUILD_TYPE MATCHES Release)
   message("-- ${CMAKE_CURRENT_SOURCE_DIR} > Release build.")
 
@@ -44,12 +45,12 @@ elseif(CMAKE_BUILD_TYPE STREQUAL Stampede_TAU)
   #set(TRANSPORT_LIB "$ENV{WORK}/envs/transports_icc_impi_tau" CACHE PATH "The path to transport libs.")
 
 elseif(CMAKE_BUILD_TYPE STREQUAL Bridges)
-  set(CMAKE_C_COMPILER  icc)
-  set(CMAKE_CXX_COMPILER  icpc)
+#  set(CMAKE_C_COMPILER  icc)
+  #set(CMAKE_CXX_COMPILER  icpc)
   message("-- ${CMAKE_CURRENT_SOURCE_DIR} > Bridges uninstructed build")
   set(TRANSPORT_LIB "$ENV{WORK}/envs/gcc_mvapich" CACHE PATH "The path to transport libs")
-  set(CMAKE_C_FLAGS "-O3 " CACHE STRING "cflags")
-  set(CMAKE_CXX_FLAGS "-O3 " CACHE STRING "cxxflags")
+  set(CMAKE_C_FLAGS "-O3")
+  set(CMAKE_CXX_FLAGS "-O3")
   set(BOOST_ROOT "$ENV{WORK}/software/install" CACHE PATH "Boost path")
   set(DECAF_PREFIX "$ENV{WORK}/software/install" CACHE PATH "decaf path")
 
@@ -63,11 +64,11 @@ elseif(CMAKE_BUILD_TYPE STREQUAL Bridges_TAU)
   set(BOOST_ROOT "$ENV{WORK}/software/install" CACHE PATH "Boost path")
   set(DECAF_PREFIX "$ENV{WORK}/software/install_tau" CACHE PATH "decaf path")
 
- 
 endif()
+ 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 message("-- Including transport method in ${TRANSPORT_LIB} is loaded...")
-message("-- build type not set")
  
 
 #set(CMAKE_CXX_STANDARD 14)
