@@ -1,0 +1,10 @@
+#!/usr/bin/env bash
+
+# First created: 2018 Mar 29
+# Last modified: 2018 Mar 29
+
+# Author: Feng Li
+# email: fengggli@yahoo.com
+
+cmake .. \
+    -DCMAKE_TOOLCHAIN_FILE=../cmake/Bridges.toolchain.cmake 
