@@ -22,6 +22,10 @@ versions
 	raw_dspacesraw_gcc_mvapich
 ----------------------------------------------------------------------------------
 ----------------------------------------------------------------------------------
+
+## Mar 29
+	Use toolchain file instead of BuildType. This will make sure flags are
+	also updated in Cache
 ## Jan 22
 	flexpath with lammps, using 1 proc in each node, 218s v 219(zipper)s
 ## Jan 18
